# superpod-whitepaper

./: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
overrides/: home.html  main.html
scripts/: generate_spi_registry.py
src/: 00-editorial-board.md  00-preface.md  00-version-history.md  06-conclusion.md  07-appendix.md  07-evidence-grading.md  07-spi-registry.md  07-spi.md  08-ecosystem-map.md  contributing.md  index.md  robots.txt
src/01-architecture/: 01-nvidia.md  02-huawei.md  03-electrical.md  04-protocols.md  05-topology.md  06-system-architecture.md  07-server-architecture.md  index.md
src/02-software/: ccl.md  comm-lib.md  hw-memory-foundations.md  index.md  memory-pooling.md  memory-semantics.md  ras.md  shmem.md  train-infer.md
src/03-simulation/: 2.workload_modeling.md  3.system_simulation.md  case-inference.md  coevolution.md  index.md
src/04-reference-designs/: dragonfly-ocs.md  index.md  ring-docs.md  standard-bus.md  standard-ether.md  torus-ocs.md
src/05-future/: bus.md  chiplet.md  hbm.md  index.md  interconnect.md  long-context.md  low-precision.md  model-tech.md  multimodal.md  packaging.md  topology.md  ultra-sparse.md
src/assets/logos/: biren.ai  hupan.ai
src/assets/stylesheets/: custom.css
src/contributing/: industry-participation.md
