[project]
name = "superpod-whitepaper-docs"
version = "0.1.0"
description = "SuperPod 技术白皮书 - 分布式 AI 推理加速架构"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-encryptcontent-plugin>=3.1.0",
    "mkdocs-excalidraw",
    "mkdocs-heti-plugin",
    "jieba>=0.42.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
]

[tool.uv]
dev-dependencies = [
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

